--- a/.github/workflows/cypress-test.yml
+++ b/.github/workflows/cypress-test.yml
@@ -12,26 +12,14 @@ jobs:
   cypress-tests:
     runs-on: ubuntu-latest
 
-    services:
-      # Configuration du service Docker pour les tests
-      cypress:
-        image: cypress/included:13.16.1
-        options: >-
-          --entrypoint= 
-          --shm-size=2g
-        volumes:
-          - .:/e2e
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: npm install
-
-    - name: Run Cypress Tests
-      run: >
-        docker run --rm
-        -v ${{ github.workspace }}:/e2e
-        -w /e2e
-        cypress/included:13.16.1
+    - name: Run Cypress in Docker
+      run: |
+        docker run --rm \
+          -v ${{ github.workspace }}:/e2e \
+          -w /e2e \
+          --shm-size=2g \
+          cypress/included:13.16.1 npx cypress run
